[package]
name = "ucdp-server"
version = "0.1.0"
authors = ["Irenee <icaroulle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5"
actix-web = "3"
async-trait = "0.1.50"
config = "0.11"
futures = "0.3"
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde = "1.0.126"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
