[package]
name = "gateway"
version = "0.1.0"
authors = ["Irenee <icaroulle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0-beta.2"
actix-http = "2.2.0"
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
aerospike = "1.0.0"
async-trait = "0.1.50"
config = "0.11"
crossbeam-channel = "0.5"
env_logger = "0.9.0"
futures = "0.3"
log = "0.4.0"
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde = "1.0.126"
serde_json = "1.0"
thiserror = "1.0.29"
uuid = { version = "0.8", features = ["serde", "v4"] }
web3 = "0.17.0"
