[package]
name = "ucdp"
version = "0.1.0"
authors = ["Irenee <icaroulle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
config = "0.11"
crossbeam-channel = "0.5"
futures = "0.3"
log = "0.4.0"
rdkafka = { version = "0.25", default-features = false, features = ["cmake-build"] }
serde = "1.0.126"
serde_json = "1.0"
thiserror = "1.0.29"
